crates/tork/tests/ui/fail/dependency_self_receiver.rs
struct NeedsSelf;

#[tork::dependency]
impl NeedsSelf {
    async fn resolve(&self) -> tork::Result<Self> {
        Ok(NeedsSelf)
    }
}

fn main() {}
